--- a/index.css
+++ b/index.css
@@ -1,11 +1,57 @@
-.primary-color{
+.primary-color {
     background-color: #7a438f96;
-}
-
-ul {
+  }
+  
+  ul {
     list-style: none;
-}
-
-li:hover {
-    opacity: 50%;
-}
+  }
+  
+  footer li:hover {
+      opacity: 50%;
+  }
+  
+  .text-color {
+      color: #428eff;
+  }
+  
+  nav.stroke ul li a {
+    position: relative;
+  }
+  nav.stroke ul li a:after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 0%;
+    content: ".";
+    color: transparent;
+    background: #000000;
+    height: 2px;
+  }
+  nav.stroke ul li a:hover:after {
+    width: 100%;
+  }
+  
+  nav ul {
+    list-style: none;
+    text-align: center;
+  }
+  nav ul li {
+    display: inline-block;
+  }
+  nav ul li a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    color: #ff0000;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin: 0 10px;
+  }
+  nav ul li a,
+  nav ul li a:after,
+  nav ul li a:before {
+    transition: all 0.5s;
+  }
+  
